--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>الــلــيث | خدمات رقمية متكاملة</title>
-  <meta name="description" content="موقع الليث لخدمات شحن جميع الألعاب والبرامج، تعبئة رصيد سيريتل و MTN جملة ومفرق، كازيات، رصيد كاش، سحب وتعبئة شام كاش، بنك بيمو والبركة، تحويل فؤاد وهرم.">
+  <meta name="description" content="موقع الليث لخدمات شحن جميع الألعاب والبرامج، تعبئة رصيد سيريتل و MTN جملة ومفرق، كازيات، رصيد كاش، سحب وتعبئة شام كاش، بنك بيمو والبركة، تحويل فؤاد وهرم. للتواصل: بوت التلغرام @Al2Laith1Communicationsbot">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -132,7 +132,7 @@
           </li>
           <li class="flex items-start">
             <div class="bg-blue-500 dark:bg-blue-400 text-white rounded-full h-8 w-8 flex items-center justify-center font-bold mr-4 shrink-0">2</div>
-            <p class="text-gray-700 dark:text-gray-300">تواصل معنا عبر واتساب على الرقم: <strong class="text-lg text-green-600 dark:text-green-400">0934002559</strong> أو عبر التلغرام: <strong class="text-lg text-blue-600 dark:text-blue-400">@Youssef_alSuleiman</strong>. زودنا بتفاصيل طلبك (مثل اسم اللعبة و ID اللاعب، رقم الهاتف للتعبئة، معلومات الفاتورة، إلخ).</p>
+            <p class="text-gray-700 dark:text-gray-300">تواصل معنا عبر بوت التلغرام: <strong class="text-lg text-blue-600 dark:text-blue-400">@Al2Laith1Communicationsbot</strong>. زودنا بتفاصيل طلبك (مثل اسم اللعبة و ID اللاعب، رقم الهاتف للتعبئة، معلومات الفاتورة، إلخ).</p>
           </li>
           <li class="flex items-start">
             <div class="bg-blue-500 dark:bg-blue-400 text-white rounded-full h-8 w-8 flex items-center justify-center font-bold mr-4 shrink-0">3</div>
@@ -179,16 +179,12 @@
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold mb-8 text-gray-800 dark:text-white">اطلب خدمتك الآن!</h2>
       <p class="text-lg text-gray-700 dark:text-gray-300 mb-8 max-w-xl mx-auto">
-        فريق الليث في خدمتك. تواصل معنا عبر واتساب أو تلغرام لتلبية جميع احتياجاتك الرقمية.
+        فريق الليث في خدمتك. تواصل معنا عبر بوت التلغرام لتلبية جميع احتياجاتك الرقمية.
       </p>
-      <div class="flex flex-col md:flex-row justify-center items-center space-y-6 md:space-y-0 md:space-x-reverse md:space-x-6">
-        <a href="https://wa.me/963934002559" target="_blank" class="bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg text-lg transition duration-300 flex items-center shadow-md">
-          <i class="fab fa-whatsapp text-2xl mr-3 ml-1"></i>
-          واتساب: 0934002559
-        </a>
-        <a href="https://t.me/Youssef_alSuleiman" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg text-lg transition duration-300 flex items-center shadow-md">
+      <div class="flex justify-center items-center">
+        <a href="https://t.me/Al2Laith1Communicationsbot" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg text-lg transition duration-300 flex items-center shadow-md">
           <i class="fab fa-telegram-plane text-2xl mr-3 ml-1"></i>
-          تلغرام: @Youssef_alSuleiman
+          بوت التلغرام: @Al2Laith1Communicationsbot
         </a>
       </div>
     </div>
@@ -227,7 +223,7 @@
                 const navElement = document.querySelector('nav');
                 const navHeight = navElement ? navElement.offsetHeight : 0;
                 const offsetTop = targetElement.offsetTop - navHeight;
-                
+
                 window.scrollTo({
                     top: offsetTop,
                     behavior: 'smooth'
@@ -237,4 +233,4 @@
     });
   </script>
 </body>
-</html>	
+</html>
